Bug 319621 - Can't reorder the songs from playlist
Summary: Can't reorder the songs from playlist
Status: RESOLVED FIXED
Alias: None
Product: plasma-mediacenter
Classification: Unmaintained
Component: MediaPlayer (other bugs)
Version First Reported In: 1.0.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Shantanu Tushar
URL:
Keywords:
Depends on:
Blocks: 321239
  Show dependency treegraph
 
Reported: 2013-05-10 12:23 UTC by Saurabh Jain
Modified: 2013-06-16 18:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Saurabh Jain 2013-05-10 12:23:11 UTC
When a media is being played and suppose we wish to remove any song from the playlist which we won't like to listen any more or would like to listen it later, the only way to remove a song is to first click on it and then clicking on "removeFromPlaylistButton" but by doing this, we will end up in interrupting our current song from being played. In case of reordering the songs, there is nothing that can be done to achieve it.
Comment 1 Shantanu Tushar 2013-05-10 12:34:37 UTC
You can remove any song from the playlist. If that one is currently playing, it will continue to play.

The reordering however, is something we'd like as a feature. So this bug is about reordering, not removing.
Comment 2 Saurabh Jain 2013-05-10 13:31:03 UTC
But in order to remove any song which is currently not being played, we first have to select that song (can be done only by clicking on that particular song). And on selection, the song gets played which will result in termination of the session of the song which we were listening to earlier. 
Yes, my previous concerns for this bug was about for removing only but then I included reordering as I have come up with solutions which can solve both the problems simultaneously.
Comment 3 Shantanu Tushar 2013-05-10 13:34:18 UTC
Ah your sentence "we will end up in interrupting our current song from being played" I felt that you're saying that deleting the current song will stop it from playing. Now I understand, its only possible to remove the currently playing song.
So there are two problems-
* Cant remove any song other than current one
* Cant reorder songs.

We need separate bugs for these two (its a good idea to have one bug handle one thing). As I've already renamed this one to reordering, please file another bug for the removal.
Comment 4 Saurabh Jain 2013-05-10 13:54:52 UTC
Actually, I have already mentioned the idea of reordering in my proposal and that's why I did not file a separate bug for it as I thought it may result in duplication. I will file a new bug for removal and will also present my solution.
Comment 5 Saurabh Jain 2013-05-10 14:30:59 UTC
I have given the patch for this bug and the bug at the following link over here - https://bugs.kde.org/show_bug.cgi?id=319626 . 
Please visit it.
Comment 6 Shantanu Tushar 2013-05-24 19:41:28 UTC
Git commit eb9385d76d5a404574d2fa866ed89e888e83b843 by Shantanu Tushar.
Committed on 24/05/2013 at 21:39.
Pushed by shantanu into branch 'master'.

Drag and Drop feature to swap items in playlist added.
Patch by Saurabh Jain <saurabhskj@hotmail.com>

REVIEW: 110621

M  +7    -0    libs/mediacenter/playlistmodel.cpp
M  +2    -0    libs/mediacenter/playlistmodel.h
M  +43   -12   mediaelements/playlist/PlaylistDelegate.qml

http://commits.kde.org/plasma-mediacenter/eb9385d76d5a404574d2fa866ed89e888e83b843