Drag and Drop feature to swap items in playlist added. Patch by Saurabh Jain <saurabhskj@hotmail.com>

REVIEW: 110621
BUG: 319621